update resource table
